# mathematical-modeling

./: .gitignore  README.md  main.py  pyproject.toml  run.sh  test.md
2022B/code/: test.ipynb.bak
2022B/paper/: paper.tex  ref.bib
2022B/paper/template/: ref.bib  template.tex
2025/: Notice.md
2025/code/: code1.py  solution.ipynb
2025/code/c/: cleaned_data.csv  cleaned_data_with_bmi_categories.csv  code1.py  female_fetus_model_results.csv  fetal_health_prediction_model.pkl  final_analysis_results.json  label_encoder_fetal_health.pkl  notebook.ipynb  regression_model_results.pkl  scaler_fetal_health.pkl  sensitivity_analysis_report.txt
2025/code/c_2/: cleaned_prenatal_data_final.csv  eda_analysis_report.txt  feature_importance_results.csv  final_clinical_recommendations.json  final_model_performance_comparison.csv  model_performance_summary.csv  monte_carlo_results.csv  notebook.ipynb  (+11 more)
2025/paper/: paper.tex  ref.bib
2025/paper_c/: paper.synctex(busy)  paper.tex  ref.bib
2025C/code/: code1.py  code2-3.py.bak  code2.py  code3.py  code4.py  solution.ipynb  附件 - 女胎检测数据.xlsx  附件 - 男胎检测数据.xlsx
2025C/paper/: paper.synctex(busy)  paper.tex  ref.bib  res.docx  res.md
C1_Output/: clean_male_data.csv  cleaned_male_fetus_data.csv  linear_model_summary.txt  mixed_effects_model_summary.txt  mixed_model_summary.txt  model1_summary.txt  model2_summary.txt  polynomial_model_summary.txt
code/: Calculator.py  Draw.py  FindPointBy3P3A.py  code3.py  code4.py  test.ipynb
code/Archive/: README.md
date/: date
paper/2022/: cumcmthesis.cls  paper.bbl  paper.synctex(busy)  paper.tex  ref.bib
paper/2025/: paper.bbl  paper.tex
paper/template/: cumcmthesis.cls  ref.bib  template.bbl  template.tex
question/C题/: ~$附件.xlsx
(+59 files in other folders)
