[project]
name = "mathematical"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py>=2.3.1",
    "imblearn>=0.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "pygam>=0.10.1",
    "scikit-learn>=1.7.1",
    "scikit-multilearn>=0.2.0",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "sympy>=1.14.0",
    "xgbse>=0.2.3",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
